--- a/src/front/styles/ScheduleDate.css
+++ b/src/front/styles/ScheduleDate.css
@@ -36,3 +36,9 @@
     font-size: 14px;
   }
   
+  .disabled-day {
+    color: #ccc;
+    background-color: #f9f9f9;
+    cursor: not-allowed;
+  }
+  
